--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,18 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/ble_settings_LL"
+        android:id="@+id/main_LL_settingsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="end">
         <LinearLayout
-            android:id="@+id/ble_onOff_LL"
+            android:id="@+id/main_LL_onOffLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         <Button
-            android:id="@+id/turnOn_btn"
+            android:id="@+id/main_btn_turnOn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#F2DDC6"
@@ -31,12 +31,12 @@
             android:textSize="14dp"/>
 
         <ImageView
-            android:id="@+id/ble_img"
+            android:id="@+id/main_img_bluetoothStatus"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:src="@drawable/va_bluetooth_disabled"/>
         <Button
-            android:id="@+id/turnOff_btn"
+            android:id="@+id/main_btn_turnOff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#F2DDC6"
@@ -46,7 +46,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/imgbtn_settings"
+            android:id="@+id/main_imgbtn_settings"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
@@ -58,7 +58,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_bluetoothScan"
+        android:id="@+id/main_btn_bluetoothScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -68,7 +68,7 @@
         android:backgroundTint="@color/cherry"/>
 
     <TextView
-        android:id="@+id/scanning_tv"
+        android:id="@+id/main_tv_scanning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -77,7 +77,7 @@
         android:textColor="@color/cherry"/>
 
     <TextView
-        android:id="@+id/dots_tv"
+        android:id="@+id/main_tv_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -86,7 +86,6 @@
         android:textColor="@color/cherry"/>
 
     <!--
-    47CF21-->
      <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/scanningLottie"
          android:layout_width="wrap_content"
@@ -94,7 +93,7 @@
          app:lottie_autoPlay="true"
          android:elevation="5dp"
          app:lottie_rawRes="@raw/loading_dots"
-         />
+         />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityMain_RV_recyclerView"
