--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#7D7C7B</color>
     <color name="cherry">#970748</color>
     <color name="peach">#FEF5EB</color>
+    <color name="peachMore">#F2DDC6</color>
 </resources>
